--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,9 @@ spring:
     properties:
       hibernate:
         type: trace
+  data:
+    rest:
+      basePath: /api
 management:
   endpoint:
     health:
